# bitchomp

./: .gitignore  Cargo.toml  README.md
src/: bytereader.rs  bytewriter.rs  chomp.rs  lib.rs  test.rs  transmutable.rs
