[package]
name = "bitchomp"
description = "A library for reading in different types from a buffer of bytes."
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
keywords = ["byte", "bytes", "endian", "reading", "writing"]
categories = ["encoding"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.18"