[package]
name = "bitchomp"
authors = ["KingPEPSALT", "AnthonyFuller"]
description = "A library for reading in different types from a buffer of bytes."
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/KingPEPSALT/bitchomp"
keywords = ["byte", "bytes", "endian", "reading", "writing"]
categories = ["encoding"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.18"
thiserror = "2.0.11"
